--- a/new_index.html
+++ b/new_index.html
@@ -17,7 +17,8 @@
 		-->
 		<script src="./lib/jquery-1.10.2.min.js" type="text/javascript"></script>
 		<script src="./lib/timbre-13.8.03.min.js" type="text/javascript"></script>
-		<script src="test_oscgen.js" type="text/javascript"></script>
+		<script src="new_main.js" type="text/javascript"></script>
+		<!--<script src="test_oscgen.js"></script>-->
 	</div>
 	<!--<div id="stats">
 		count
