--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html>
-<meta name="viewport" content="width=device-width, user-scalable=no"/>
+<meta name="viewport" content="width=device-width; initial-scale=0.75; user-scalable=yes;"/>
 <title>audit chop</title>
 <head>
 	<link href="style.css" rel="stylesheet" type="text/css">
