--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 			<div id="box_se"></div>
 		</div>
 		<script src="./lib/jquery-1.10.2.min.js" type="text/javascript"></script>
-		<script src="./lib/timbre-13.8.03.min.js" type="text/javascript"></script>
+		<script src="./lib/timbre.min.js" type="text/javascript"></script>
 		<script src="main.js" type="text/javascript"></script>
 	</div>
 	<!--<div id="stats">
